# llm-rate-card

./: .gitattributes  .gitignore  .yamllint  CLAUDE.md  LICENSE  Makefile  README.md  config.yaml  pyproject.toml  sources.yaml  whitelist.yaml
.github/workflows/: build-rate-card.yml  validate-schemas.yml
schema/: AUTHORING.md  README.md
schema/v1/: README.md  example.json  registries.json  registries.schema.json  schema.json
specs/: llm-ratecard.md
src/rate_card/: README.md  changelog.py  cli.py  config.py  filter.py  generate.py  hashing.py  merge.py  registries.py  schema.py  types.py
src/rate_card/sources/: _http.py  _normalise.py  _scraper.py  anthropic.py  base.py  cerebras.py  glm.py  groq.py  litellm.py  minimax.py  mistral.py  openai.py  qwen.py  xai.py
tests/: test_changelog.py  test_cli.py  test_config.py  test_filter.py  test_generate.py  test_hashing.py  test_merge.py  test_registries.py  test_schema.py  test_smoke.py  test_sources_anthropic.py  test_sources_base.py  test_sources_cerebras.py  test_sources_glm.py  test_sources_groq.py  test_sources_http.py  test_sources_litellm.py  test_sources_minimax.py  test_sources_mistral.py  test_sources_normalise.py  test_sources_openai.py  test_sources_qwen.py  test_sources_scraper.py  test_sources_xai.py
tests/fixtures/: litellm-snapshot.json
tests/fixtures/scrapers/: anthropic.html  cerebras.html  glm.html  groq.html  minimax.html  mistral.html  openai.html  qwen.html  xai.html
